# pythonocc-core

./: .gitignore  CMakeLists.txt  pyproject.toml  update_pyproject_version.py
.github/workflows/: build-wheels.yaml
cmake/: OCCT_Modules.cmake
src/SWIG_files/wrapper/: Bnd.i
